--- a/css/login.css
+++ b/css/login.css
@@ -137,6 +137,10 @@ iframe {
   padding-bottom: 20px;
 }
 
+.login{
+	background-image: url('images/bg-01.jpg');
+}
+
 .sign{
     font-family: Poppins-Regular;
     font-size: 14px;
